--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -70,16 +69,12 @@ dependencies {
     implementation "org.koin:koin-android:2.1.6"
 
     //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
-
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -88,8 +83,5 @@ dependencies {
     implementation "androidx.paging:paging-runtime:3.0.0-alpha06"
 
     //coil
-    implementation("io.coil-kt:coil:0.13.0")
-
-    implementation 'com.android.support:multidex:1.0.3'
-
+    implementation "io.coil-kt:coil:0.13.0"
 }
